spade-tests/src/snapshots/spade_tests__hir_lowering__tests__negative_pipeline_depth_is_disallowed.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(-1) x(clk: clock) -> bool {
    true
}

error: Negative pipeline depth
  ┌─ testinput:1:10
  │
1 │ pipeline(-1) x(clk: clock) -> bool {
  │          ^^ Expected non-negative depth, found -1
